--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,7 +1,3 @@
-.footer {
-  margin-top: 40px;
-}
-
 .reinsurance {
   background: $primary;
   padding: 40px 0px;
