--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,10 @@
 #navbar {
-  position:fixed;
+  // position:fixed;
   width: 100%;
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.07), 0 1px 0 0 rgba(0, 0, 0, 0.3);
   z-index:10000;
   background-color: white;
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0.6s linear, opacity 1s linear;
+  // transition: visibility 0.6s linear, opacity 1s linear;
 }
 
 .navbar-top {
@@ -15,14 +13,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-
-#navbar.scrolled {
-  background-color: white;
-  visibility: visible;
-  opacity: 1;
-  transition: background-color 0.3s ease-in-out, visibility 0.6s linear, opacity 1s linear;
 }
 
 /* Logo */
