--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,6 @@
 body {
   background-color: white;
+  margin-top:71px;
 }
 
 .carousel {
