--- a/app/assets/stylesheets/pages/_payment.scss
+++ b/app/assets/stylesheets/pages/_payment.scss
@@ -1,5 +1,5 @@
 .order-recap-page {
-  min-height: 78vh;
+  min-height: 87vh;
   h1 {
     margin: 0 0 20px 0;
   }
